style(instructeurs): fix dropdown visibility when table height is short

--- a/app/assets/stylesheets/02_utils.scss
+++ b/app/assets/stylesheets/02_utils.scss
@@ -131,6 +131,10 @@
   color: $black;
 }
 
+.overflow-y-visible {
+  overflow: visible;
+}
+
 // generate spacer utility like bootstrap my-2 -> margin-left/right: 2 * $default-spacer
 // using $direction.key as css modifier, $direction.values to set css properties
 // scale it using $steps
