--- a/app/assets/stylesheets/procedure_show.scss
+++ b/app/assets/stylesheets/procedure_show.scss
@@ -22,6 +22,7 @@
   .dossiers-table {
     margin-top: $default-spacer;
     margin-bottom: 3 * $default-spacer;
+    overflow: visible; // remove DSFR hidden overflow because of dropdown
   }
 
   .procedure-actions {
